feat: AI 서비스 및 모델 관련 기능 추가
- AIPrompt 엔티티에 모델 제공자, 모델 이름, 버전 및 설명 필드 추가.
- AIService 클래스 생성 및 프롬프트 실행 로직 구현.
- LLMService 인터페이스 및 OpenAiService 클래스 추가하여 OpenAI API와의 통신 기능 구현.
- AiProperties 클래스 추가하여 AI 서비스 설정 관리.
- NoteService에 AI 서비스 통합 및 노트 향상 기능 추가.

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -55,6 +55,11 @@ dependencies {
 	// implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	// Scheduling for SRS
 	implementation 'org.springframework.boot:spring-boot-starter-quartz'
+
+
+
+	//	 WebClient 사용을 위해 추가
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
 tasks.named('test') {
