--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -2,7 +2,7 @@ name: Frontend CI/CD
 
 on:
   push:
-    branches: [ "dev-fe", "fe/ci-test" ]
+    branches: [ "dev-fe", "release", "main" ]
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend-cicd.yml'
