--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,17 +2,22 @@ spring:
   application:
     name: pomki
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/pomki
-    username: root
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:pomki;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
     password: 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   data:
     redis:
       host: localhost
