--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -45,6 +45,10 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+	// S3
+	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.1'
+	// thumbnailator
+	implementation 'net.coobird:thumbnailator:0.4.20'
 }
 
 tasks.named('test') {
