fix: frontend ci 버그수정

--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -71,7 +71,7 @@ jobs:
       run: |
         aws cloudfront create-invalidation \
           --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-          --paths "/frontend/*"
+          --paths "/*"
 
     - name: Notify Discord on Success
       if: success()
