--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.1'
 	// thumbnailator
 	implementation 'net.coobird:thumbnailator:0.4.20'
+	// fcm
+	implementation 'com.google.firebase:firebase-admin:9.5.0'
 }
 
 tasks.named('test') {
