--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 	// S3
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.1'
+	implementation 'software.amazon.awssdk:s3'
 	// thumbnailator
 	implementation 'net.coobird:thumbnailator:0.4.20'
 }
