--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -7,7 +7,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
-
+    "types": ["vite-plugin-pwa/client"],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
