--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,6 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.0",
-    "vite-plugin-svgr": "^4.3.0",
-    "@types/dompurify": "^2.4.6"
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
