--- a/.github/workflows/frontend-accessibility.yml
+++ b/.github/workflows/frontend-accessibility.yml
@@ -175,6 +175,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Frontend environment
+      working-directory: ${{ env.FE_DIR }}
+      run: |
+        cat << 'EOF' > .env
+        ${{ secrets.FE_ENV_DEV }}
+        EOF
+      
+
     - name: Set up Node.js 22
       uses: actions/setup-node@v4
       with:
