--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,15 +18,16 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.6",
     "firebase": "^11.9.1",
     "framer-motion": "^12.17.3",
+    "marked": "^16.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
-    "styled-components": "^6.1.19",
-    "dompurify": "^3.0.8"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
