chore: 수동 배포 추가
유지보수를 위한 수동 배포 버튼 추가

--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -11,7 +11,13 @@ on:
     paths:
       - 'backend/**'
       - '.github/workflows/backend-cicd.yml'
-
+  workflow_dispatch:
+    inputs:
+      message:
+        description: '수동 실행 원인 설명'
+        type: text
+        required: false
+  
 env:
   BE_DIR: backend
   GH_TOKEN: ${{ secrets.POMKI_CI_PAT || secrets.GITHUB_TOKEN }}
